--- a/src/styling/home.css
+++ b/src/styling/home.css
@@ -114,16 +114,78 @@ nav ul {
 
 .cursors {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
   margin: 3% auto;
   width: 100%;
 }
 .cursor-card {
   background-color: rgb(25, 25, 25);
-  width: 20%;
+  margin: 2% auto;
+  width: 15rem;
   padding: 1rem 0rem;
   text-align: center;
   border-radius: 5px;
 }
 .cursor-card p {
   padding: 0.5rem 0;
+}
+
+.card-img {
+  padding: 1rem;
+  border: 1px solid white;
+  border-radius: 5px;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.cursors-input {
+  background: transparent;
+  border: 1px solid white;
+  width: 50%;
+  margin: 1% auto;
+  padding: 0.5rem;
+  border-radius: 10px;
+}
+
+.search-icon {
+  background-color: transparent;
+  border: none;
+}
+
+.search-icon i {
+  background-color: white;
+  color: black;
+  font-size: 1.3rem;
+  border-radius: 100%;
+  margin-left: 0.3rem;
+  padding: 0.35rem;
+  cursor: pointer;
+}
+
+footer {
+  width: 90%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+footer ul {
+  display: flex;
+  list-style-type: none;
+  width: 100%;
+  justify-content: space-evenly;
+  color: azure;
+  margin: 2% auto;
+}
+
+footer p {
+  margin: 1% auto;
+}
+@media screen and (max-width: 980px) {
+  #hero {
+    flex-direction: column;
+    align-items: center;
+  }
 }
